<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:srcCompat="@drawable/ic_puzzle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_intro"
        android:layout_width="@dimen/image_boy_width_size"
        android:layout_height="@dimen/image_boy_height_size"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cmi_boy" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_survey"
        android:layout_width="@dimen/settings_size"
        android:layout_height="@dimen/settings_size"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="4dp"
        app:layout_constraintEnd_toStartOf="@id/img_settings"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_survey"
        app:tint="@android:color/white" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_settings"
        android:layout_width="@dimen/settings_size"
        android:layout_height="@dimen/settings_size"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings"
        app:tint="@android:color/white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_short_name"
        style="@style/Widget.Cmi.TextView.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_app_short_name"
        android:textSize="@dimen/text_size_short_name"
        app:layout_constraintBottom_toTopOf="@id/text_long_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_intro" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_long_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_app_long_name"
        android:textSize="@dimen/text_size_large_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_short_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        style="@style/Widget.Cmi.Button.Primary"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/text_start"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_guide"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_long_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_guide"
        style="@style/Widget.Cmi.Button.Primary"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_guide"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btn_start"
        app:layout_constraintTop_toBottomOf="@id/text_long_name" />

</androidx.constraintlayout.widget.ConstraintLayout>